--- a/style.css
+++ b/style.css
@@ -23,7 +23,23 @@ h1,h2,h3 {
     font-weight: bold;
 }
 
-.stAlert-success{
-    background-color: #fdecea ;
-    color : #a4282a;
+.block-container {
+   padding: 2rem;
+}
+
+/* Message de succès */
+.stAlert-success {
+   background-color: #e9f5e9;
+   border-left: 4px solid #228B22;
+}
+/* Encadré pour les fichiers 
+[data-testid="stFileUploader"] > div {
+   background-color: #ffffff;
+   padding: 1rem;
+   border-radius: 10px;
+   border: 1px solid #ccc;
+}*/
+
+footer {
+   visibility: hidden;
 }
